--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,21 @@
 
     <!--  First Page  -->
     <string name="welcome_title"><u>Olá! Seja Bem Vindo ao <br /> Nosso App</u></string>
-    <string name="cpf_cnpj_field_text">Informe seu <b> <font color='#650199'>CPF</font></b> ou <b> <font color='#650199'>CNPJ</font></b> para checarmos se já possui cadastro.</string>
+    <string name="cpf_cnpj_field_text">Informe seu <b><font color='#650199'>CPF</font></b> ou <b><font color='#650199'>CNPJ</font></b> para checarmos se já possui cadastro.</string>
     <string name="search_login_button_text">Consultar</string>
+
+    <!--  Login Page  -->
+    <string name="login_page_title"><u>Já Sou Cadastrado</u></string>
+    <string name="login_page_email"><u>E-mail</u></string>
+    <string name="login_page_password"><u>Senha</u></string>
+    <string name="login_page_login"><u>Acessar Conta</u></string>
 
     <!--  Registration Page  -->
     <string name="registration_page_title"><u>Primeiro Acesso</u></string>
     <string name="registration_page_name">Seu Nome</string>
     <string name="registration_page_email">Seu E-mail</string>
     <string name="registration_page_password">Senha</string>
+    <string name="registration_page_person">Plano: Empresarial/Pessoal</string>
     <string name="registration_page_save">Cadastrar</string>
 
     <string name="app_name">VivoN</string>
