--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="registration_page_person">Plano: Empresarial/Pessoal</string>
     <string name="registration_page_save">Cadastrar</string>
 
+    <!--  Dashboard Page  -->
+    <string name="dashboard_page_welcome_title">Seja Bem-Vindo(a)</string>
+
+
     <string name="app_name">VivoN</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
