--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
 
     <!--  Login Page  -->
     <string name="login_page_title"><u>Já Sou Cadastrado</u></string>
-    <string name="login_page_email"><u>E-mail</u></string>
-    <string name="login_page_password"><u>Senha</u></string>
-    <string name="login_page_login"><u>Acessar Conta</u></string>
+    <string name="login_page_email">E-mail</string>
+    <string name="login_page_password">Senha</string>
+    <string name="login_page_login">Acessar Conta</string>
 
     <!--  Registration Page  -->
     <string name="registration_page_title"><u>Primeiro Acesso</u></string>
