--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,9 @@
     <string name="registration_page_name">Seu Nome</string>
     <string name="registration_page_email">Seu E-mail</string>
     <string name="registration_page_password">Senha</string>
-    <string name="registration_page_person">Plano: Empresarial/Pessoal</string>
+    <string name="registration_page_type">Qual Plano deseja cadastrar?</string>
+    <string name="registration_page_type_business">Empresarial</string>
+    <string name="registration_page_type_personal">Pessoal</string>
     <string name="registration_page_save">Cadastrar</string>
 
     <!--  Dashboard Page  -->
